# sankaku_uploader

./: .gitignore  LICENSE  README.md  launcher.cpp  pyproject.toml  rebuild.bat  start.bat  start.sh
scripts/: fix_quote.py  launcher.cpp  start.bat  start.sh
src/sankaku_uploader/: app.py
src/sankaku_uploader/application/: __init__.py  task_service.py  upload_runner.py
src/sankaku_uploader/domain/: __init__.py  enums.py  models.py  state_machine.py
src/sankaku_uploader/infrastructure/: __init__.py  automation.py  storage.py
src/sankaku_uploader/ui/: __init__.py  main_window.py
tests/: test_automation_helpers.py  test_automation_surface.py  test_domain_models.py  test_gui_focus.py  test_state_machine.py  test_storage.py  test_task_service.py  test_upload_runner_config.py
